# PaRaVis

./: .coverage  CITATION.cff  CONTRIBUTING.md  LICENSE  PaRaVis.ipynb  PaRaVis.py  README.md  coverage.json  environment.yml  pyproject.toml
.github/workflows/: CI.yml  Coverage.yml  Tests.yml
Data/Inputs/: Sentinel2-Neka.tif
Documentation/: Documentation.md
docs/: guide.md
examples/: batch_processing.py  custom_index.py  headless_indices.py
parammadrz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
paravis/: __init__.py  __version__.py
paravis.egg-info/: PKG-INFO  SOURCES.txt
paravis/api/: __init__.py  indices.py  raoq.py  visualization.py
paravis/core/: __init__.py  models.py
paravis/core/indices/: __init__.py  constants.py  engine.py  models.py  registry.py
paravis/core/raoq/: __init__.py  engine.py  gpu.py  models.py
paravis/core/raster/: __init__.py  reader.py  utils.py  writer.py
paravis/gui/: __init__.py  app.py  main_window.py
paravis/gui/components/: __init__.py  mpl_canvas.py  recent_files.py  splash.py  workers.py
paravis/gui/dialogs/: __init__.py  about.py  band_mapping.py  constants_editor.py  index_table.py  settings.py
paravis/gui/models/: __init__.py  delegates.py  index_table_model.py  proxy_model.py
paravis/gui/theme/: dark_teal.qss  light_teal.qss
paravis/gui/widgets/: __init__.py  (+3 more)
paravis/utils/: __init__.py  logging.py  settings.py  system.py
paravis/workers/: __init__.py  base_worker.py  index_worker.py  raoq_worker.py
scripts/: compare_cpu_gpu_distances.py  generate_graphical_abstract.py  run_tests_isolated.py
tests/: __init__.py  conftest.py  test_api.py  test_core_indices.py  test_core_models.py  test_core_raoq.py  test_cpu_gpu_equivalence.py  test_gui_components.py  test_gui_dialogs.py  test_gui_models.py  test_gui_widgets.py  test_main_window.py  test_raster_io.py  test_utils.py  test_workers.py
(+34 files in other folders)
